--- a/admin/layout/css/backend.css
+++ b/admin/layout/css/backend.css
@@ -1,6 +1,7 @@
 /* Start Main Rules*/
 body{
     background-color: #F4F4F4;
+    font-size: 16px;
 }
 /* End Main Rules*/
 /* Start Login Form */
@@ -26,3 +27,35 @@ body{
 }
 
 /* End Login Form */
+/* Start Bootstrap Edits */
+.navbar{
+    border-radius: 0px;
+    margin-bottom: 0px;
+}
+.nav>li>a,
+.navbar-brand {
+    padding: 15px 12px;
+}
+.navbar-brand{
+    font-size: 1em;
+}
+.navbar-inverse .navbar-nav>.open>a,
+.navbar-inverse .navbar-nav>.open>a:focus,
+.navbar-inverse .navbar-nav>.open>a:hover,
+.dropdown-menu{
+    background-color: #3498db;
+}
+.dropdown-menu{
+    min-width: 180px;
+    padding: 0px;
+    font-size: 1em;
+    border: none;
+    border-radius: 0px;
+}
+.dropdown-menu > li > a {
+    color: #fff;
+    padding: 10px 15px;
+}
+
+
+/* End Bootstrap Edits */
