--- a/admin/layout/css/backend.css
+++ b/admin/layout/css/backend.css
@@ -61,3 +61,12 @@ body{
 
 
 /* End Bootstrap Edits */
+
+/*Start Member Page*/
+h1{
+    font-size: 55px;
+    margin: 40px 0;
+    font-weight: bold;
+    color: #666;
+}
+/*End Member Page*/
